--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
           
             <!--SOUNDCLOUD PLAYER -->
             <div class="audio">
-              <iframe width="800" height="450" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/300719597&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-            </div><!--SOUNDCLOUD PLAYER -->
+              <iframe width="800" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/574155885&color=%230066cc&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+	</div><!--SOUNDCLOUD PLAYER -->
 
             <!-- pond5 PLAYER-->
             <div class="pond5">
